# Go1_navigation

./: README.md
a2_ros2udp/: CMakeLists.txt  package.xml
a2_ros2udp/include/: .dog_controller.h.swl  .dog_controller.h.swm  .dog_controller.h.swn  .dog_controller.h.swo  .dog_controller.h.swp  .unitree_legged_sdk_to_ros.h.swp  dog_controller.h  unitree_legged_sdk_to_ros.h
a2_ros2udp/params/: locations.yaml
a2_ros2udp/scripts/: goal_sender.py
a2_ros2udp/src/: .new_ros_control_for_go1_sdk_20220117.cpp.swn  .new_ros_control_for_go1_sdk_20220117.cpp.swo  .new_ros_control_for_go1_sdk_20220117.cpp.swp  new_ros_control_for_go1_sdk_20220117.cpp
gmapping/: package.xml
lio_sam/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
lio_sam/config/: .params.yaml.swn  .params.yaml.swo  .params.yaml.swp  params (rslidar-16).yaml  params (velodyne-16).yaml  params.yaml
lio_sam/launch/: .run.launch.swl  .run.launch.swm  .run.launch.swn  .run.launch.swo  .run.launch.swp  run.launch
lio_sam/src/: .globalLocalize.cpp.swk  .globalLocalize.cpp.swl  .globalLocalize.cpp.swm  .globalLocalize.cpp.swn  .globalLocalize.cpp.swo  .globalLocalize.cpp.swp  .imuPreintegration.cpp.swn  .imuPreintegration.cpp.swo  .imuPreintegration.cpp.swp  globalLocalize.cpp  imuPreintegration.cpp  mapOptmization.cpp
navigation/: package.xml
navigation/launch/: .go1_move_base.launch.swp  go1_move_base.launch  go1_navigation.launch
rslidar/rs_to_velodyne/: CMakeLists.txt
rslidar/rslidar_laserscan/: VERSION.md
rslidar/rslidar_sdk_helios16p/: CMakeLists.txt
start/: VERSION.md  package.xml
(+72 files in other folders)
